--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -56,13 +56,13 @@
       <DependentUpon>FormView.cs</DependentUpon>
     </Compile>
     <Compile Include="Hinder.cs" />
-    <Compile Include="Level1.cs">
+    <Compile Include="Level.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Level1.Designer.cs">
-      <DependentUpon>Level1.cs</DependentUpon>
+    <Compile Include="Level.Designer.cs">
+      <DependentUpon>Level.cs</DependentUpon>
     </Compile>
-    <Compile Include="level1SpillPanel.cs">
+    <Compile Include="levelSpillPanel.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Login.cs">
@@ -71,6 +71,7 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Luftballong.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Register.cs">
@@ -79,14 +80,16 @@
     <Compile Include="Register.Designer.cs">
       <DependentUpon>Register.cs</DependentUpon>
     </Compile>
+    <Compile Include="Skytter.cs" />
+    <Compile Include="Smiley.cs" />
     <Compile Include="SpillPanel.cs">
       <SubType>Component</SubType>
     </Compile>
     <EmbeddedResource Include="FormView.resx">
       <DependentUpon>FormView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Level1.resx">
-      <DependentUpon>Level1.cs</DependentUpon>
+    <EmbeddedResource Include="Level.resx">
+      <DependentUpon>Level.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
