--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -74,6 +74,11 @@
     <Compile Include="Luftballong.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Register.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,7 +86,15 @@
       <DependentUpon>Register.cs</DependentUpon>
     </Compile>
     <Compile Include="Skytter.cs" />
-    <Compile Include="Smiley.cs" />
+    <Compile Include="Smiley.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="SpillInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SpillInfo.Designer.cs">
+      <DependentUpon>SpillInfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="SpillPanel.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -96,16 +109,14 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <EmbeddedResource Include="Register.resx">
       <DependentUpon>Register.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SpillInfo.resx">
+      <DependentUpon>SpillInfo.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -124,6 +135,10 @@
     <Content Include="Resources\action.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\Dturkis1.png" />
+    <None Include="Resources\Drød1.png" />
+    <None Include="Resources\Dgrønn1.png" />
+    <None Include="Resources\skyter.png" />
     <None Include="Resources\bakgrunn.png" />
     <None Include="Resources\luftbalong1.png" />
     <None Include="Resources\luftbalong.png" />
