--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -135,6 +135,7 @@
     <Content Include="Resources\action.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\game_over.wav" />
     <None Include="Resources\gatherGemSound.wav" />
     <None Include="Resources\Dturkis1.png" />
     <None Include="Resources\Drød1.png" />
