--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -55,23 +55,23 @@
     <Compile Include="FormView.Designer.cs">
       <DependentUpon>FormView.cs</DependentUpon>
     </Compile>
-    <Compile Include="Hinder.cs" />
-    <Compile Include="Level.cs">
+    <Compile Include="Spillobjekter\Hinder.cs" />
+    <Compile Include="Forms\Level.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Level.Designer.cs">
+    <Compile Include="Forms\Level.Designer.cs">
       <DependentUpon>Level.cs</DependentUpon>
     </Compile>
     <Compile Include="levelSpillPanel.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Login.cs">
+    <Compile Include="Forms\Login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Login.Designer.cs">
+    <Compile Include="Forms\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="Luftballong.cs" />
+    <Compile Include="Spillobjekter\Luftballong.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -79,20 +79,20 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Register.cs">
+    <Compile Include="Forms\Register.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Register.Designer.cs">
+    <Compile Include="Forms\Register.Designer.cs">
       <DependentUpon>Register.cs</DependentUpon>
     </Compile>
-    <Compile Include="Skytter.cs" />
-    <Compile Include="Smiley.cs">
+    <Compile Include="Spillobjekter\Skytter.cs" />
+    <Compile Include="Spillobjekter\Smiley.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="SpillInfo.cs">
+    <Compile Include="Forms\SpillInfo.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SpillInfo.Designer.cs">
+    <Compile Include="Forms\SpillInfo.Designer.cs">
       <DependentUpon>SpillInfo.cs</DependentUpon>
     </Compile>
     <Compile Include="SpillPanel.cs">
@@ -101,10 +101,10 @@
     <EmbeddedResource Include="FormView.resx">
       <DependentUpon>FormView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Level.resx">
+    <EmbeddedResource Include="Forms\Level.resx">
       <DependentUpon>Level.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Login.resx">
+    <EmbeddedResource Include="Forms\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -112,10 +112,10 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="Register.resx">
+    <EmbeddedResource Include="Forms\Register.resx">
       <DependentUpon>Register.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="SpillInfo.resx">
+    <EmbeddedResource Include="Forms\SpillInfo.resx">
       <DependentUpon>SpillInfo.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
