--- a/Game/App.config
+++ b/Game/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Game.Properties.Settings.BRP_DB1ConnectionString"
+            connectionString="server=kark.hin.no;user id=bjornrp;password=bjornrp123;persistsecurityinfo=True;database=BRP_DB1"
+            providerName="MySql.Data.MySqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
     </startup>
