--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -49,11 +49,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DBConnect.cs" />
+    <Compile Include="Forms\HiScore.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\HiScore.Designer.cs">
+      <DependentUpon>HiScore.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormView.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormView.Designer.cs">
       <DependentUpon>FormView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HiScoreDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>HiScoreDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="Spillobjekter\Hinder.cs" />
     <Compile Include="Forms\Level.cs">
@@ -98,6 +109,9 @@
     <Compile Include="SpillPanel.cs">
       <SubType>Component</SubType>
     </Compile>
+    <EmbeddedResource Include="Forms\HiScore.resx">
+      <DependentUpon>HiScore.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormView.resx">
       <DependentUpon>FormView.cs</DependentUpon>
     </EmbeddedResource>
@@ -118,6 +132,17 @@
     <EmbeddedResource Include="Forms\SpillInfo.resx">
       <DependentUpon>SpillInfo.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="HiScoreDataSet.xsc">
+      <DependentUpon>HiScoreDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="HiScoreDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>HiScoreDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="HiScoreDataSet.xss">
+      <DependentUpon>HiScoreDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
