--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Forms\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Spillobjekter\Kule.cs" />
     <Compile Include="Spillobjekter\Luftballong.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
